--- a/services.html
+++ b/services.html
@@ -57,7 +57,7 @@
                             <li>✓ 45-minute in-depth role kick-off call</li>
                             <li>✓ Custom sourcing strategy tailored to your role</li>
                             <li>✓ Multi-channel approach using premium tools</li>
-                            <li>✓ 10-15 qualified and interested candidates</li>
+                            <li>✓ 4 - 8 qualified and interested candidates</li>
                             <li>✓ Professional candidate outreach & engagement</li>
                             <li>✓ 30-minute pipeline review & hand-off call</li>
                         </ul>
