--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
                 <nav class="nav" id="nav">
                     <a href="index.html" class="nav-link">Home</a>
                     <a href="services.html" class="nav-link">Services</a>
+                    <a href="why-us.html" class="nav-link">Why Us</a>
                     <a href="about.html" class="nav-link active">About</a>
                     <a href="contact.html" class="nav-link">Contact</a>
                 </nav>
@@ -139,6 +140,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="services.html">Services</a></li>
+                        <li><a href="why-us.html">Why Us</a></li>
                         <li><a href="about.html">About</a></li>
                         <li><a href="contact.html">Contact</a></li>
                     </ul>
