--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
             <div class="header-content">
                 <a href="index.html" class="logo">
-                    <img src="images/pridus-logo.jpg" alt="Pridus Global Logo">
+                    <img src="images/pridus-logo.png" alt="Pridus Global Logo">
                 </a>
                 <nav class="nav" id="nav">
                     <a href="index.html" class="nav-link active">Home</a>
