--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pridus Global - Strategic Talent Solutions | Unbundle Your Recruitment</title>
-    
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
     <!-- SEO Meta Tags -->
     <meta name="description" content="Transparent, unbundled recruitment services. 20+ years global hiring expertise. From $299 job descriptions to $6,000 quarterly retainers. Pay only for what you need.">
     <meta name="keywords" content="unbundled recruitment, talent solutions, candidate sourcing, recruitment services, hiring expertise, talent acquisition, affordable recruitment, flat fee recruitment">
