Google Analytics change

--- a/about.html
+++ b/about.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Learn about Pridus Global's mission to revolutionize recruitment. Our values: Excellence, Innovation, Integrity, and Results.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
 <body>
     <header class="header" id="header">
         <div class="container">
