--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Ready to transform your recruitment? Contact Nithin Maganahalli at +1-732-456-8835 or nithin@pridusglobal.com.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
 <body>
     <header class="header" id="header">
         <div class="container">
