--- a/services.html
+++ b/services.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Four transparent service tiers from $299 to $6,000. Job descriptions, candidate sourcing, full coordination, and quarterly retainers.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
 <body>
     <header class="header" id="header">
         <div class="container">
