--- a/why-us.html
+++ b/why-us.html
@@ -7,6 +7,15 @@
     <meta name="description" content="See how Pridus Global's transparent, unbundled model saves companies $12K-$27K per hire compared to traditional 15-25% agency fees.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+ <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
 <body>
     <header class="header" id="header">
         <div class="container">
