--- a/why-us.html
+++ b/why-us.html
@@ -186,6 +186,7 @@
         </div>
     </section>
 
+</section>
     <!-- The Solution -->
     <section class="solution-section">
         <div class="container">
@@ -231,7 +232,7 @@
                 </div>
             </solutions-grid>
         </div>
-
+</section>
 
     <!-- CTA -->
     <section class="cta">
