--- a/about.html
+++ b/about.html
@@ -3,19 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Pridus Global | Transforming Recruitment Through Innovation</title>
-    <meta name="description" content="Learn about Pridus Global's mission to revolutionize recruitment. Our values: Excellence, Innovation, Integrity, and Results.">
+    <title>About Pridus Global | Software Consulting & Technology Services</title>
+    <meta name="description" content="Leading software consulting firm in the United States. Expert technology solutions and strategic talent acquisition for growing companies.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-64X16CDBTM');
-</script>
 <body>
     <header class="header" id="header">
         <div class="container">
@@ -42,18 +33,19 @@
 
     <section class="page-hero">
         <div class="container">
-            <h1 class="gradient-text">About Us</h1>
-            <p>Transforming Recruitment Through Innovation</p>
+            <h1 class="gradient-text">About Pridus Global</h1>
+            <p>Your Partner in Technology & Talent Excellence</p>
         </div>
     </section>
 
+    <!-- Story Section -->
     <section class="about-story">
         <div class="container">
             <div class="about-grid">
                 <div class="about-content">
-                    <h2>About Pridus Global</h2>
-                    <p>At Pridus Global, we revolutionize the way companies find and attract top talent. With our cutting-edge recruitment solutions, we combine strategic expertise with technology-driven approaches to deliver exceptional results.</p>
-                    <p>Our mission is to bridge the gap between extraordinary talent and forward-thinking organizations, creating meaningful connections that drive business success.</p>
+                    <h2>Who We Are</h2>
+                    <p>Pridus Global is a premier recruitment and consulting firm serving organizations across the United States. With deep expertise in talent acquisition and human resources consulting, we partner with companies of all sizes to build exceptional teams.</p>
+                    <p>Our mission is to connect talented professionals with rewarding career opportunities while helping organizations achieve their strategic objectives through superior talent solutions. We take pride in our consultative approach, industry knowledge, and commitment to long-term partnerships.</p>
                 </div>
                 <div class="about-image">
                     <img src="https://images.pexels.com/photos/4344860/pexels-photo-4344860.jpeg" alt="Team collaboration">
@@ -62,67 +54,69 @@
         </div>
     </section>
 
+    <!-- Values Section -->
     <section class="values">
         <div class="container">
             <div class="section-header">
                 <h2>Our Core Values</h2>
-                <p>The principles that guide everything we do</p>
+                <p>The principles that guide our work</p>
             </div>
             <div class="values-grid">
                 <div class="value-card">
                     <div class="value-icon">🎯</div>
                     <h3>Excellence</h3>
-                    <p>We deliver premium recruitment solutions with unwavering quality and professionalism.</p>
+                    <p>We deliver high-quality software solutions and consulting services with unwavering commitment to excellence.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">💡</div>
                     <h3>Innovation</h3>
-                    <p>We leverage the latest tools and strategies to stay ahead in the evolving recruitment landscape.</p>
+                    <p>We stay ahead of technology trends and bring cutting-edge solutions to solve complex business challenges.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">🛡️</div>
                     <h3>Integrity</h3>
-                    <p>We build trust through transparent communication and ethical practices.</p>
+                    <p>We build trust through transparent communication, ethical practices, and honest counsel.</p>
                 </div>
                 <div class="value-card">
                     <div class="value-icon">📈</div>
                     <h3>Results</h3>
-                    <p>We are committed to delivering measurable outcomes that exceed expectations.</p>
+                    <p>We focus on delivering measurable business outcomes that drive real value for our clients.</p>
                 </div>
             </div>
         </div>
     </section>
 
+    <!-- Services Overview -->
     <section class="why-choose">
         <div class="container">
-            <h2 class="text-center">Why Choose Pridus Global?</h2>
+            <h2 class="text-center">Our Approach</h2>
             <div class="why-grid">
                 <div class="why-item">
                     <div class="why-number">1</div>
                     <div class="why-content">
-                        <h3>Proven Track Record</h3>
-                        <p>With over 500 satisfied clients and 2,000+ successful placements, we have the expertise to deliver results.</p>
+                        <h3>Industry Expertise</h3>
+                        <p>Specialized knowledge across multiple industries including technology, healthcare, finance, manufacturing, and professional services.</p>
                     </div>
                 </div>
                 <div class="why-item">
                     <div class="why-number">2</div>
                     <div class="why-content">
-                        <h3>Innovative Approach</h3>
-                        <p>We leverage cutting-edge technology and data-driven strategies to find the perfect talent match.</p>
+                        <h3>Proven Track Record</h3>
+                        <p>Successful placements and consulting engagements with organizations ranging from startups to Fortune 500 companies.</p>
                     </div>
                 </div>
                 <div class="why-item">
                     <div class="why-number">3</div>
                     <div class="why-content">
-                        <h3>Personalized Service</h3>
-                        <p>Every client receives tailored solutions designed specifically for their unique hiring challenges.</p>
+                        <h3>Consultative Approach</h3>
+                        <p>We take time to understand your business, culture, and unique needs to provide tailored recruitment and consulting solutions.</p>
                     </div>
                 </div>
                 <div class="why-item">
                     <div class="why-number">4</div>
                     <div class="why-content">
-                        <h3>Transparent Communication</h3>
-                        <p>We keep you informed every step of the way, ensuring clear expectations and timely delivery.</p>
+                        <h3>Extensive Network</h3>
+                        <p>Access to a broad network of qualified professionals across all levels and industries throughout the United States.</p>
                     </div>
                 </div>
             </div>
@@ -132,7 +126,7 @@
     <section class="cta">
         <div class="container">
             <h2>Let's Work Together</h2>
-            <p>Discover how Pridus Global can transform your recruitment strategy and help you build exceptional teams.</p>
+            <p>Discover how Pridus Global can help you build exceptional teams and achieve your organizational goals.</p>
             <a href="contact.html" class="btn btn-white btn-large">Contact Us Today</a>
         </div>
     </section>
@@ -142,7 +136,7 @@
             <div class="footer-grid">
                 <div class="footer-col">
                     <h3>Pridus Global</h3>
-                    <p>Transforming recruitment through innovation. We connect extraordinary talent with forward-thinking organizations.</p>
+                    <p>Professional recruitment and consulting services firm dedicated to connecting exceptional talent with leading organizations across the United States.</p>
                 </div>
                 <div class="footer-col">
                     <h4>Quick Links</h4>
