--- a/contact.html
+++ b/contact.html
@@ -3,19 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Pridus Global | Get in Touch for Recruitment Solutions</title>
-    <meta name="description" content="Ready to transform your recruitment? Contact Nithin Maganahalli at +1-732-456-8835 or nithin@pridusglobal.com.">
+    <title>Contact Pridus Global | Software Consulting & Technology Services</title>
+    <meta name="description" content="Get in touch with Pridus Global for software consulting, IT services, and talent acquisition. Contact Nithin Maganahalli at +1-732-456-8835.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
- <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-64X16CDBTM');
-</script>
 <body>
     <header class="header" id="header">
         <div class="container">
@@ -85,7 +76,7 @@
 
                 <div class="contact-info-wrapper">
                     <h2>Contact Information</h2>
-                    <p>Have questions? We're here to help. Reach out through any of the channels below or fill out the form.</p>
+                    <p>Have questions about our software consulting or technology services? We're here to help. Reach out through any of the channels below.</p>
                     
                     <div class="contact-info-cards">
                         <div class="contact-info-card">
