--- a/services.html
+++ b/services.html
@@ -7,6 +7,15 @@
     <meta name="description" content="Comprehensive recruitment and consulting services including permanent placement, contract staffing, executive search, and HR consulting.">
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
 <body>
     <header class="header" id="header">
         <div class="container">
