--- a/index.html
+++ b/index.html
@@ -21,6 +21,15 @@
     
     <link rel="stylesheet" href="css/styles.css">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-64X16CDBTM"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-64X16CDBTM');
+</script>
 <body>
     <!-- Header -->
     <header class="header" id="header">
